feat(llecoop/order-list/list): #507 add total order products quantities list
ISSUES CLOSED: #507

--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -45,7 +45,7 @@
   [fields]="formConfig.getConfig() || []"
   [model]="facade.model?.() || {}"
   [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.()) || {}"
-  (temporaryChangeEvent)="onChange($event)"
+  (temporaryChangeEvent)="facade.onChange?.($event)"
   (pendingChangesEvent)="pendingChanges.set($event)"
-  (changeEvent)="onSubmit($event)">
+  (changeEvent)="facade.onSubmit($event); pendingChanges.set(false)">
 </plastik-shared-form-feature>
