--- a/libs/shared/form/ui/table/src/lib/input-table.component.html
+++ b/libs/shared/form/ui/table/src/lib/input-table.component.html
@@ -12,5 +12,6 @@
   [actions]="tableActions()"
   [extraRowStyles]="tableExtraRowStyles()"
   [noPagination]="tableNoPagination()"
+  [ngClass]="disabled() ? 'opacity-50 pointer-events-none' : ''"
   (getChangedData)="onGetChangedData($event)">
 </plastik-shared-table>
