--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -40,7 +40,7 @@
 
 <plastik-shared-form-feature
   class="flex flex-row justify-between content-center items-end filters-box"
-  [fields]="facade.formStructure || []"
+  [fields]="facade.filterFormConfig || []"
   [model]="{ text: '' }"
   [submitAvailable]="false"
   (changeEvent)="onChangeFiltering($event)">
