--- a/libs/llecoop/order-list/feature/list/src/lib/order-list-feature-list.component/llecoop-order-list-feature-list.component.html
+++ b/libs/llecoop/order-list/feature/list/src/lib/order-list-feature-list.component/llecoop-order-list-feature-list.component.html
@@ -1,5 +1,6 @@
 @let viewConfig = facade.viewConfig();
 @let tableDefinition = facade.tableDefinition;
+@let viewExtraActions = facade.viewExtraActions() || [];
 
 <div
   class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
@@ -9,14 +10,17 @@
   </h2>
 
   <div class="flex flex-row justify-end items-center gap-sm">
-    <button
-      type="button"
-      mat-flat-button
-      color="accent"
-      class="text-white"
-      [routerLink]="['/admin/comanda']">
-      <mat-icon>arrow_back</mat-icon> Tornar al llistat
-    </button>
+    @for (action of viewExtraActions; track action) {
+      <button
+        type="button"
+        mat-flat-button
+        color="accent"
+        class="text-white"
+        [disabled]="action.disabled()"
+        (click)="action.execute()">
+        <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
+      </button>
+    }
   </div>
 </div>
 
@@ -41,25 +45,30 @@
   [actions]="tableDefinition.actions || {}"
   [noPagination]="tableDefinition.noPagination || false"
   [extraRowStyles]="tableDefinition.extraRowStyles"
+  [actionsColStyles]="tableDefinition.actionsColStyles || ''"
   [expandedDetailTpl]="orderDetail"
   [expandable]="true"
   [expandedElementId]="tableDefinition.getSelectedItemId?.() || null"
-  (changeSorting)="facade.onTableSorting($event)">
+  (changeSorting)="facade.onTableSorting($event)"
+  (delete)="facade.onTableActionDelete($event)">
 </plastik-shared-table>
 
 <ng-template #orderDetail let-element="element">
   @defer (when !!element) {
-    @let fields = facade.orderLIstDetailUserOrderDetailFormStructure.getConfig() || [];
-    @let submitConfig =
-      facade.orderLIstDetailUserOrderDetailFormStructure.getSubmitFormConfig?.(!!element) || {};
+    @let totalTableDefinition = facade.totalTableDefinition;
 
-    <plastik-shared-form-feature
-      class="flex flex-row justify-between content-center items-end filters-box"
-      [fields]="fields"
-      [model]="element"
-      [submitConfig]="submitConfig"
-      (pendingChangesEvent)="pendingChanges.set($event)"
-      (changeEvent)="facade.onSaveUserOrder($event); pendingChanges.set(false)">
-    </plastik-shared-form-feature>
+    <div class="flex flex-col justify-between gap-md pt-lg">
+      <h3 class="text-md">Totals de la comanda {{ element.name }}:</h3>
+      <plastik-shared-table
+        [data]="totalTableDefinition.getData?.(element.id) || []"
+        [caption]="totalTableDefinition.caption || ''"
+        [columnProperties]="totalTableDefinition.columnProperties || []"
+        [resultsLength]="totalTableDefinition?.count() || 0"
+        [sort]="totalTableDefinition.sort?.()"
+        [pageSizeOptions]="totalTableDefinition.pageSizeOptions || []"
+        [paginationVisibility]="totalTableDefinition?.paginationVisibility"
+        [noPagination]="true">
+      </plastik-shared-table>
+    </div>
   }
 </ng-template>
