--- a/libs/core/cms-layout/ui/footer/src/lib/core-cms-layout-ui-footer.component.html
+++ b/libs/core/cms-layout/ui/footer/src/lib/core-cms-layout-ui-footer.component.html
@@ -1,3 +1,5 @@
-<footer class="flex justify-center text-center text-white align-middle p-sub bg-primary">
-  <ng-content select="[content]"></ng-content>
-</footer>
+<mat-toolbar class="flex justify-center items-center">
+  <footer>
+    <ng-content select="[content]"></ng-content>
+  </footer>
+</mat-toolbar>
