--- a/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
+++ b/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
@@ -9,12 +9,7 @@
   </h2>
 
   <div class="flex flex-row justify-end items-center gap-sm">
-    <button
-      type="button"
-      mat-flat-button
-      color="accent"
-      class="text-white"
-      [routerLink]="['/admin/comanda']">
+    <button type="button" mat-flat-button color="accent" [routerLink]="['/admin/comanda']">
       <mat-icon>arrow_back</mat-icon> Tornar al llistat
     </button>
   </div>
