--- a/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
+++ b/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
@@ -10,55 +10,58 @@
   </h2>
 
   <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-tiny">
-    <button type="button" mat-flat-button color="accent" class="text-white" [routerLink]="['../']">
+    <button type="button" mat-flat-button [routerLink]="['../']">
       <mat-icon>arrow_back</mat-icon> Tornar al llistat
     </button>
   </div>
 </div>
 
 <div class="flex flex-col justify-between gap-md pt-lg">
-  <section class="rounded-lg shadow-sm bg-gray-5 p-md mb-md" aria-label="Resum de la comanda">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-md">
-      <article class="flex flex-col">
-        <header>
-          <h3 class="flex justify-start items-center gap-tiny mb-sm">
-            <span class="text-primary">Resum de la comanda</span
-            ><span
-              class="text-sm text-secondary-dark"
-              [innerHTML]="facade.formattedUserOrderStatus()"></span>
-          </h3>
-        </header>
-        <dl class="space-y-2">
+  <section
+    class="rounded-lg shadow-sm p-md mb-md"
+    [attr.aria-label]="'Resum de la comanda ' + order?.name">
+    <article>
+      <h3 class="text-primary-dark text-md text-pretty">
+        {{ order?.name }}
+      </h3>
+
+      <mat-chip disableRipple class="my-sm">
+        <mat-icon matChipAvatar [class]="facade.orderStatus()?.class">
+          {{ facade.orderStatus()?.icon }}
+        </mat-icon>
+        {{ facade.orderStatus()?.label }}
+      </mat-chip>
+
+      <dl class="space-y-2">
+        <div class="flex items-center gap-tiny">
+          <dt class="text-gray-80">Id:</dt>
+          <dd>{{ order?.id }}</dd>
+        </div>
+        <div class="flex items-center gap-tiny">
+          <dd>{{ order?.name }}</dd>
+        </div>
+        <div class="flex items-center gap-tiny">
+          <dt class="text-gray-80">Nom:</dt>
+          <dd>{{ order?.userName }}</dd>
+        </div>
+        @if (order?.address) {
           <div class="flex items-center gap-tiny">
-            <dt class="text-gray-80">Id:</dt>
-            <dd>{{ order?.id }}</dd>
-          </div>
-          <div class="flex items-center gap-tiny">
-            <dd>{{ order?.name }}</dd>
-          </div>
-          <div class="flex items-center gap-tiny">
-            <dt class="text-gray-80">Nom:</dt>
-            <dd>{{ order?.userName }}</dd>
-          </div>
-          @if (order?.address) {
-            <div class="flex items-center gap-tiny">
-              <dt class="text-gray-80">Adreça:</dt>
-              <dd>
-                <address class="not-italic">
-                  {{ order?.address }}
-                </address>
-              </dd>
-            </div>
-          }
-          <div class="flex items-center gap-tiny">
-            <dt class="text-gray-80">Email:</dt>
+            <dt class="text-gray-80">Adreça:</dt>
             <dd>
-              {{ order?.userEmail }}
+              <address class="not-italic">
+                {{ order?.address }}
+              </address>
             </dd>
           </div>
-        </dl>
-      </article>
-    </div>
+        }
+        <div class="flex items-center gap-tiny">
+          <dt class="text-gray-80">Email:</dt>
+          <dd>
+            {{ order?.userEmail }}
+          </dd>
+        </div>
+      </dl>
+    </article>
   </section>
 
   <plastik-shared-table
@@ -71,7 +74,7 @@
   </plastik-shared-table>
 
   <section
-    class="flex flex-col self-end rounded-lg shadow-sm p-sm min-w-third bg-gray-5 gap-tiny"
+    class="flex flex-col self-end rounded-lg shadow-sm p-sm min-w-third gap-tiny"
     aria-label="Total de la compra">
     <dl class="divide-y divide-secondary-dark">
       <div class="flex flex-row justify-between items-center p-tiny">
