--- a/libs/shared/auth/feature/src/lib/auth-feature/auth-feature.component.html
+++ b/libs/shared/auth/feature/src/lib/auth-feature/auth-feature.component.html
@@ -30,7 +30,7 @@
       </mat-card-content>
 
       <mat-card-footer
-        class="w-full text-center text-white border-t-2 text-[12px] text-pretty bg-strippedPrimaryDark py-sub border-spacing-sm border-t-primary-light">
+        class="w-full text-center text-white border-t-2 text-[12px] text-pretty bg-secondary-dark py-sub border-spacing-sm border-t-primary-light">
         <a class="text-white" target="_self" [href]="nameLink()">{{ name() }}</a>
         {{ currentDate | date: 'yyyy' }}
       </mat-card-footer>
