--- a/libs/shared/form/ui/input-color-picker/src/lib/input-color-picker-type.component.html
+++ b/libs/shared/form/ui/input-color-picker/src/lib/input-color-picker-type.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center gap-sm">
+<div class="flex justify-center items-center gap-sm">
   <mat-label>{{ props.label }}</mat-label>
   <ngx-colors
     ngx-colors-trigger
