--- a/apps/llecoop/src/styles/_font-family.scss
+++ b/apps/llecoop/src/styles/_font-family.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
