--- a/libs/core/styles/util/material/src/_snackbar.scss
+++ b/libs/core/styles/util/material/src/_snackbar.scss
@@ -1,17 +1,37 @@
+@use '@angular/material' as mat;
+
 //  ----- Snack Bar https://material.angular.io/components/snack-bar ----- //
-.mat-mdc-snack-bar-container {
-  &.message-box {
-    &-error {
-      --mdc-snackbar-container-color: var(--plastik-error-notification-box-color, rgb(208, 0, 0));
-    }
-    &-warning {
-      --mdc-snackbar-container-color: var(--plastik-warning-notification-box-color, rgb(255, 181, 43));
-    }
-    &-info {
-      --mdc-snackbar-container-color: var(--plastik-info-notification-box-color, rgb(25, 25, 255));
-    }
-    &-success {
-      --mdc-snackbar-container-color: var(--plastik-success-notification-box-colors, rgb(31, 163, 31));
+:root {
+  .mat-mdc-snack-bar-container {
+    &.message-box {
+      &-error {
+        @include mat.snack-bar-overrides(
+          (
+            container-color: var(--plastik-error-notification-box-color, rgb(208, 0, 0)),
+          )
+        );
+      }
+      &-warning {
+        @include mat.snack-bar-overrides(
+          (
+            container-color: var(--plastik-warning-notification-box-color, rgb(255, 181, 43)),
+          )
+        );
+      }
+      &-info {
+        @include mat.snack-bar-overrides(
+          (
+            container-color: var(--plastik-info-notification-box-color, rgb(25, 25, 255)),
+          )
+        );
+      }
+      &-success {
+        @include mat.snack-bar-overrides(
+          (
+            container-color: var(--plastik-success-notification-box-colors, rgb(31, 163, 31)),
+          )
+        );
+      }
     }
   }
 }
